# conductor

./: .editorconfig  Cargo.toml  Makefile  README.md
.github/workflows/: lint.yml  test.yml
crates/conductor/: Cargo.toml
crates/conductor-cli/: Cargo.toml
crates/conductor-cli/src/: main.rs
crates/conductor-core/: Cargo.toml
crates/conductor-core/src/: buffer.rs  lib.rs  node.rs  nodes.rs  pipeline.rs  ports.rs  prelude.rs  timer.rs
crates/conductor-macros/: Cargo.toml
crates/conductor-macros/src/: lib.rs
crates/conductor-nodes/: Cargo.toml
crates/conductor-nodes/src/: lib.rs  prelude.rs
crates/conductor-nodes/src/audio/: player.rs  recorder.rs
crates/conductor-nodes/src/control/: comparison.rs  mod.rs  multiplexing.rs
crates/conductor-nodes/src/io/: file.rs  mod.rs  print.rs  udp.rs
crates/conductor-nodes/src/math/: add.rs  arihtmetic.rs  fft.rs  immediate.rs  mod.rs  norm.rs  trigonometry.rs
crates/conductor-nodes/src/math/fft/: mod.rs  window.rs
crates/conductor-nodes/src/misc/: buffer.rs  downsampler.rs  into.rs  lambda.rs  mod.rs  pass.rs  resampler.rs  sample_generator.rs  synchronize.rs
crates/conductor-nodes/src/signal_processing/: fft.rs  filter.rs  mod.rs  window.rs
crates/conductor-sim/: Cargo.toml
crates/conductor-sim/src/: args.rs  error.rs  main.rs  plotter.rs  voltmeter.rs
crates/conductor-sim/src/plotter/: app.rs  mod.rs  trigger.rs
crates/conductor/src/: lib.rs  node.rs  prelude.rs  traits.rs
crates/conductor/src/io/: mod.rs  pass.rs  print.rs  udp.rs
crates/conductor/src/nodes/: mod.rs  print.rs  udp.rs
crates/conductor/src/orchestrator/: mod.rs  pipeline.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator-cli/: Cargo.toml
crates/orchestrator-cli/src/: main.rs
crates/orchestrator/src/: lib.rs
