[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
readme = "README.md"

[workspace.dependencies]
conductor = { path = "crates/conductor", version = "0.1.0" }
conductor-core = { path = "crates/conductor-core", version = "0.1.0" }
conductor-nodes = { path = "crates/conductor-nodes", version = "0.1.0" }
