[package]
name = "conductor-sim"
version = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }

[dependencies]
clap = { version = "4.5.14", features = ["derive"] }

# Peak voltmeter dependencies
csv = "1.3.0"
serde = { version = "1.0.205", features = ["derive"] }

# Plotter dependencies
conductor-core = { workspace = true }
egui = "0.28.1"
eframe = "0.28.1"
egui_plot = "0.28.1"
